filter series name & picture

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,7 +1,19 @@
 <main class="main">
 
-    <p>este es el main </p>
 
-    <p class="title"></p>
+    <h1 class="title">Buscador de series</h1>
+    <form class="js-form">
+        <input type="text" class="js-input-serie" id="inputSerie">
+    </form>
+    <button for="inputSerie" class="search-button">Search</button>
+    <div class="js-series-container">
+
+    </div>
+    <div class="js-series-favourite-container">
+        <h2 class="favourite-title">Mis series favoritas</h2>
+        <ul class="favourite-list js-favourite-list">
+
+        </ul>
+    </div>
 
 </main>
