general style, background & containers

--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -6,7 +6,7 @@
         <input type="text" class="js-input-serie" id="inputSerie">
     </form>
     <button for="inputSerie" class="search-button">Search</button>
-    <div class="js-series-container">
+    <div class="js-series-container series-container">
 
     </div>
     <div class="js-series-favourite-container">
