is favourite, indexof

--- a/_src/assets/scss/pages/_main.scss
+++ b/_src/assets/scss/pages/_main.scss
@@ -8,7 +8,12 @@
         flex-direction: column;
         margin: 10px;
     }
-    .img {
-        width: 200px;
-    }
+}
+
+.favourite {
+    border: red solid 10px;
+}
+
+.img {
+    width: 200px;
 }
