--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,19 +1,15 @@
-<main class="main">
-
-
-    <h1 class="title">Buscador de series</h1>
-    <form class="js-form">
-        <input type="text" class="js-input-serie" id="inputSerie">
-    </form>
-    <button for="inputSerie" class="search-button">Search</button>
-    <div class="js-series-container series-container">
-
-    </div>
-    <div class="js-series-favourite-container">
-        <h2 class="favourite-title">Mis series favoritas</h2>
-        <ul class="favourite-list js-favourite-list">
-
-        </ul>
-    </div>
-
+<main class="main-container">
+    <aside class="section-favourite">
+        <div class="js-series-favourite-container">
+            <h2 class="favourite-title">Mis series favoritas</h2>
+            <ul class="favourite-list js-favourite-list"></ul>
+        </div>
+    </aside>
+    <section class="section-series">
+        <form class="js-form form">
+            <input type="text" class="js-input-serie input-serie" id="inputSerie">
+            <button for="inputSerie" class="search-button">Search</button>
+        </form>
+        <div class="js-series-container series-container"></div>
+    </section>
 </main>
