--- a/_src/templates/index.html
+++ b/_src/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <partial src="./_head.html"></partial>
 
-<body>
+<body class="body">
     <partial src="./_header.html"></partial>
     <partial src="./_main.html"></partial>
     <script type="text/javascript" src="./assets/js/main.js"></script>
