--- a/_src/assets/scss/core/_reset.scss
+++ b/_src/assets/scss/core/_reset.scss
@@ -1,15 +1,6 @@
 /// reset styles ///
 * {
+    font-family: Arial, Helvetica, sans-serif;
     box-sizing: border-box;
-    padding: 0px;
-    margin: 0px;
-}
-
-body {
-    padding: 0;
     margin: 0;
-}
-
-html {
-    // font-size: 16px;
 }
