--- a/_src/assets/scss/core/_variables.scss
+++ b/_src/assets/scss/core/_variables.scss
@@ -1,9 +1,12 @@
 // colors
-$colorPrimary: #438792;
-$colorSecondary: #e17334;
-$colorTertiary: #114e4e;
-$colorQuaternary: #a2deaf;
-$colorIndexBackground: #f5f5f5;
+$colorPrimary: darkred;
+$colorQuaternary: white;
+$colorSecondary: grey;
+//
+$colorTertiary: lightgrey;
+//
+//
+$colorBackground: black;
 $colorTextLight: #6b6b6b;
 $colorTextMenu: #54585a;
 $colorBlack: #000000;
