--- a/_src/assets/scss/pages/_main.scss
+++ b/_src/assets/scss/pages/_main.scss
@@ -1,24 +1,24 @@
-* {
-    font-family: Arial, Helvetica, sans-serif;
-    box-sizing: border-box;
-    margin: 0;
-}
-
-.body {
-    background-color: lightblue;
-    height: 100vh;
-}
-
-.header {
-    background-color: lightblue;
-    padding: 10px;
-    text-align: center;
-}
-
 .main-container {
     display: flex;
     flex-direction: row;
     height: 80vh;
+    margin-top: 150px;
+}
+
+.favouriteIconContainer {
+    background-color: $colorSecondary;
+    width: 100%;
+    text-align: center;
+}
+
+.favourite-icon {
+    color: $colorTertiary;
+    font-size: 30px;
+    padding-bottom: 15px;
+    // transition: color ease 0.5s;
+    // &:hover {
+    //     color: $colorPrimary;
+    // }
 }
 
 .series-container {
@@ -26,34 +26,44 @@
     flex-wrap: wrap;
     width: 100%;
     // height: 85%;
-    background-color: lightgrey;
+    background-color: $colorTertiary;
     // margin-bottom: 30px;
-    .titleSerie {
-        color: red;
-        font-size: 20px;
-    }
     .serieContainer {
         display: flex;
         flex-direction: column;
         align-items: center;
-        margin: 10px;
+        margin: 15px;
         width: 35%;
         @media all and (min-width: 1200px) {
             width: 18%;
         }
-        // @media (min-width: 768px) {
-        //     width: 10%;
-        // }
+    }
+    .img {
+        opacity: 0.5;
+    }
+    .titleSerie {
+        color: $colorPrimary;
+        font-size: 25px;
+        padding: 10px 0 10px 0;
+        width: 100%;
+        text-align: center;
+        background-color: $colorSecondary;
+    }
+    .iconContainer {
+        background-color: $colorBackground;
     }
 }
 
 .section-favourite {
-    padding: 20px;
-    width: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-right: 30px;
     .favourite-title {
         font-size: 25px;
-        text-align: center;
         padding-bottom: 10px;
+        text-align: center;
+        padding-left: 30px;
     }
     .title-favourite {
         font-size: 20px;
@@ -61,7 +71,9 @@
 }
 
 .form {
-    padding: 10px;
+    padding: 20px 0 20px 20px;
+    position: absolute;
+    left: 0;
 }
 
 .search-button {
@@ -78,23 +90,49 @@
 
 .favourite {
     border: red solid 10px;
-    background-color: red;
+    background-color: black;
     .titleSerie {
         color: white;
+        background-color: black;
     }
     .serieContainer {
         display: flex;
         flex-direction: column;
         margin: 10px;
     }
+    .favouriteIconContainer {
+        background-color: black;
+        .favourite-icon {
+            color: darkred;
+        }
+    }
+    .img {
+        opacity: 0.5;
+        transition: opacity ease 0.8s;
+        &:hover {
+            opacity: 1;
+        }
+    }
 }
 
 .img {
     width: 100%;
-    border: solid grey 1.5px;
+    border: solid black 1.5px;
+}
+
+.img {
+    opacity: 0.5;
+    transition: opacity ease 1s;
+    &:hover {
+        opacity: 1;
+    }
 }
 
 .list-favourite {
     display: flex;
     flex-direction: row;
+}
+
+.serieContainer {
+    margin: 5px 0 10px 0;
 }
