--- a/_src/assets/scss/style.scss
+++ b/_src/assets/scss/style.scss
@@ -1,12 +1,12 @@
 // Core
 @import "core/reset";
-@import "core/functions";
 @import "core/mixins";
 @import "core/links";
 @import "core/variables";
 @import "core/typography";
 // Layout
 @import "layout/header";
+@import "layout/favourite";
 @import "layout/footer";
 // Components
 @import "components/buttons";
