--- a/_src/assets/scss/core/_variables.scss
+++ b/_src/assets/scss/core/_variables.scss
@@ -2,48 +2,7 @@
 $colorPrimary: darkred;
 $colorQuaternary: white;
 $colorSecondary: grey;
-//
+$colorRedSecondary: red;
 $colorTertiary: lightgrey;
-//
-//
 $colorBackground: black;
-$colorTextLight: #6b6b6b;
-$colorTextMenu: #54585a;
-$colorBlack: #000000;
-$colorWhite: #ffffff;
-$colorLineLight: #f9f4dc;
-$colorLineBorder: #d8d8d8;
-$colorLineBorderBox: #f1dacc;
-$colorCardBackDark: #bfcdd0;
-$colorCardBackLight: #dde9ed;
-$palleteRedPrimary: #420101;
-$palleteRedSecondary: #bd1010;
-$palleteRedTertiary: #e95626;
-$palleteYellowPrimary: #3e5b65;
-$palleteYellowSecondary: #eab052;
-$palleteYellowTertiary: #a0c0cf;
-$twitterButton: #00a0f5;
-// sizes
-$sizeText: 18px;
-$sizeText2: 14px;
-// buttonsCard
-$buttonWidth: 32px;
-$buttonHeight: 32px;
-$buttonBorderRadius: 16px;
-$buttonBorder: solid 2px $colorQuaternary;
-// images
-$imagePath: "../../assets/images";
-// colors palette 1
-$color1Palette1: #114e4e;
-$color2Palette1: #438792;
-$color3Palette1: #a2deaf;
-// colors palette 2
-$color1Palette2: #420101;
-$color2Palette2: #bd1010;
-$color3Palette2: #e95626;
-// colors palette 3
-$color1Palette3: #3e5b65;
-$color2Palette3: #eab052;
-$color3Palette3: #a0c0cf;
 //
-$colorUnselected:lightgrey;
