--- a/_src/templates/partials/_header.html
+++ b/_src/templates/partials/_header.html
@@ -2,6 +2,7 @@
     <h1 class="title">Buscador de series</h1>
     <form class="js-form form">
         <input type="text" class="js-input-serie input-serie" id="inputSerie">
-        <button for="inputSerie" class="search-button">Search</button>
+        <button for="inputSerie" class="search-button" style="cursor: pointer">Search</button>
+
     </form>
 </header>
