--- a/_src/assets/scss/pages/_main.scss
+++ b/_src/assets/scss/pages/_main.scss
@@ -1,65 +1,79 @@
 .main-container {
     display: flex;
-    flex-direction: row;
-    height: 80vh;
-    margin-top: 150px;
-}
-
-.favouriteIconContainer {
-    background-color: $colorSecondary;
-    width: 100%;
-    text-align: center;
-}
-
-.favourite-icon {
-    color: $colorTertiary;
-    font-size: 30px;
-    padding-bottom: 15px;
-}
-
-.serieContainer {
-    margin: 5px 0 10px 0;
-}
-
-.titleSerie {
-    background-color: $colorSecondary;
+    flex-direction: column;
+    margin-top: 135px;
 }
 
 .series-container {
+    margin-top: 22px;
     display: flex;
-    flex-wrap: wrap;
-    width: 100%;
-    background-color: $colorTertiary;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    height: 70vh;
+    //
     .serieContainer {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        margin: 15px;
-        width: 35%;
-        @media all and (min-width: 1200px) {
-            width: 18%;
-        }
-    }
-    .img {
-        opacity: 0.5;
+        flex: 0 0 auto;
+        height: 350px;
+        padding: 5px;
+        border: 1px solid black;
+        margin: 0 10px 0 10px;
     }
     .titleSerie {
-        font-size: 25px;
-        padding: 10px 0 10px 0;
+        font-size: 16px;
+        padding: 5px 0 5px 0;
         width: 100%;
         text-align: center;
     }
     .iconContainer {
         background-color: $colorBackground;
     }
+    .img {
+        height: 82%;
+    }
+    @media all and(min-width: 1200px) {
+        display: flex;
+        flex-wrap: wrap;
+        padding-left: 50px;
+        width: 100%;
+        height: 70vh;
+        .serieContainer {
+            width: 16%;
+            margin: 10px;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .img {
+            height: 82%;
+        }
+    }
+}
+
+.favouriteIconContainer {
+    width: 100%;
+    text-align: center;
+}
+
+.favourite-icon {
+    color: lightgray;
+    font-size: 30px;
 }
 
 .img {
-    width: 100%;
     border: solid black 1.5px;
     opacity: 0.5;
     transition: opacity ease 1s;
     &:hover {
         opacity: 1;
     }
+}
+
+.footer {
+    background-color: rgb(243, 236, 236);
+    padding: 15px;
+    position: fixed;
+    bottom: 0;
+    width: 100vw;
+    text-align: center;
+    font-size: 18px;
 }
