--- a/_src/templates/partials/_main.html
+++ b/_src/templates/partials/_main.html
@@ -1,9 +1,11 @@
 <main class="main-container">
     <aside class="section-favourite">
-        <div class="js-series-favourite-container">
-            <h2 class="favourite-title">Mis series favoritas</h2>
-            <ul class="favourite-list js-favourite-list"></ul>
+        <div class="js-series-favourite-container series-favourite-container" style="cursor: pointer">
+            <h2 class="favourite-title">Mis series favoritas <i class="fas fa-heart heart-menu"></i></h2>
         </div>
+        <ul class="favourite-list js-favourite-list">
+        </ul>
+
     </aside>
     <section class="section-series">
         <div class="js-series-container series-container"></div>
